--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,5 +22,15 @@
             android:id="@+id/button" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
+    <EditText
+            android:layout_width="136dp"
+            android:layout_height="43dp"
+            android:inputType="textPersonName"
+            android:text="Git is great"
+            android:ems="10"
+            android:id="@+id/editText"
+            app:layout_constraintBottom_toTopOf="@+id/textView" android:layout_marginBottom="16dp"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
